--- a/src/components/PersonalAccount/PersonalAccount.scss
+++ b/src/components/PersonalAccount/PersonalAccount.scss
@@ -1,4 +1,4 @@
-@import "../../styles/utils/variables";
+@use "../../styles/utils/variables" as *;
 
 .Busket-container-wrapper {
   background-color: rgba(236, 236, 236, 1);
