--- a/src/components/BestSellers/BestSellers.css
+++ b/src/components/BestSellers/BestSellers.css
@@ -95,7 +95,7 @@
   transition: background-image 0.2s ease-in-out;
 }
 .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_top .BestSellers_main-info .BestSellers_btns .BestSellers_btn.fav:hover {
-  background-image: url("../../assets/img/heartb.svg");
+  background-image: url("../../assets/img/Heartb.svg");
   background-color: rgb(18, 32, 45);
 }
 .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_top .BestSellers_sizes {
