--- a/src/components/NewProducts/NewProducts.css
+++ b/src/components/NewProducts/NewProducts.css
@@ -92,7 +92,7 @@
   transition: background-image 0.2s ease-in-out;
 }
 .container-newproducts .newProducts-objs .newProducts .newProducts_top .newProducts_main-info .newProducts_btns .newProducts_btn.fav:hover {
-  background-image: url("../../assets/img/heartb.svg");
+  background-image: url("../../assets/img/Heartb.svg");
   background-color: rgb(18, 32, 45);
 }
 .container-newproducts .newProducts-objs .newProducts .newProducts_top .newProducts_sizes {
