--- a/src/components/ObjectToBusket/SelectedItem.scss
+++ b/src/components/ObjectToBusket/SelectedItem.scss
@@ -1,4 +1,4 @@
-@import "../../styles/utils/variables";
+@use "../../styles/utils/variables" as *;
 
 .container-SelectedItem {
   max-width: 1072px;
