--- a/src/components/PasswordRecovery/PasswordRecovery.scss
+++ b/src/components/PasswordRecovery/PasswordRecovery.scss
@@ -1,4 +1,4 @@
-@import "../../styles/utils/variables";
+@use "../../styles/utils/variables" as *;
 
 .PasswordRecovery-wrapper {
   background-color: rgba(18, 32, 45, 1);
