--- a/src/components/PersonalData/PersonalData.scss
+++ b/src/components/PersonalData/PersonalData.scss
@@ -1,4 +1,4 @@
-@import "../../styles/utils/variables";
+@use "../../styles/utils/variables" as *;
 
 .PersonalData-container {
   max-width: 1072px;
