--- a/src/components/SoMayLikePage/SoMayLike.css
+++ b/src/components/SoMayLikePage/SoMayLike.css
@@ -88,7 +88,7 @@
   transition: background-image 0.2s ease-in-out;
 }
 .container-SoMayLike .SoMayLike-objs .SoMayLike .SoMayLike_top .SoMayLike_main-info .SoMayLike_btns .SoMayLike_btn.fav:hover {
-  background-image: url("../../assets/img/heartb.svg");
+  background-image: url("../../assets/img/Heartb.svg");
   background-color: rgb(18, 32, 45);
 }
 .container-SoMayLike .SoMayLike-objs .SoMayLike .SoMayLike_top .SoMayLike_sizes {
