--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -115,6 +115,32 @@
     color: #000;
     cursor: pointer;
   }
+
+  .searchResults {
+    list-style: none;
+    margin: 8px 0 0;
+    padding: 0;
+    max-height: 300px;
+    overflow-y: auto;
+    background: #fff;
+    border-radius: 4px;
+    width: 100%;
+
+    .searchResultItem {
+      padding: 8px 16px;
+
+      a {
+        color: #000;
+        text-decoration: none;
+        display: block;
+        width: 100%;
+      }
+
+      &:hover {
+        background: #f0f0f0;
+      }
+    }
+  }
 }
 
 .productsDropdown-wrapper {
